# VerifyLM

./: .gitignore  README.md  pyproject.toml
tests/: test_verifylm.py
verifylm/: ClaimDetector.py  FactChecker.py  VerifyLM.py  __main__.py
