[tool.poetry]
name = "verifylm"
version = "0.1.0"
description = ""
authors = ["Tom Potter <tom.potter@bbc.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
openai = "^1.59.7"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.0"
pytest-randomly = "^3.16.0"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
